--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6"
